<resources>
    <string name="app_name">WhyNot</string>
    <string name="action_settings">Settings</string>
    <string name="action_preferences">Preferences</string>
    <string name="title_activity_event">EventActivity</string>

    <string name="example_description">Expandable/Collapsible Views (text, images, etc.)
        in Android are useful when we want to display all the available options
        on one screen, without the user having to scroll all the way to fi
        nd the one he/she is interested in. What we are doing is trying t
        o maximize the use of the available space on the screen by giving
        an overall view of its content. The Android SDK provides the Expan
        dableListView class, but sometimes that option is overkill
        or unfit for our intents  purposes, and we may decide to roll out our own mechanism.</string>

    <!--Button strings-->
    <string name="button_website_text">Website</string>
    <string name="button_tickets_text">Tickets</string>
    <string name="button_route_text">Directions</string>

    <!--Preference strings-->
    <string name="preference_category_header_text">What are you into?</string>
    <string name="preference_radius_header_text">How close? (in Km)</string>
    <string name="preference_spinner_header_text">Which order?</string>
    <string name="category_gigs_text">Nightlife</string>
    <string name="category_performing_text">Performing arts</string>
    <string name="category_exhibitions_text">Exhibitions</string>
    <string name="category_workshops_text">Workshop/Classes</string>
    <string name="category_festivals_text">Festivals</string>
    <string name="category_sports_text">Sports</string>

    <string-array name="order_array">
        <item>Closest</item>
        <item>Cheapest</item>
        <item>Earliest</item>
    </string-array>
</resources>
